k8s-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: devsecops
  name: vulnerable-app-ingress

spec:
  podSelector:
    matchLabels:
      app: vulnerable-app

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: vulnerable-app
      ports:
        - protocol: TCP
          port: 5000

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53

    - to:
        - podSelector:
            matchLabels:
              access: vulnerable-app
      ports:
        - protocol: TCP
          port: 5000
